<resources>
    <string name="app_name">MuyahoAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- main -->
    <string name="menu_home">home</string>
    <string name="menu_calc">calc</string>
    <string name="menu_board">board</string>
    <string name="menu_my">my</string>

    <!-- common -->
    <string name="percent">%</string>
    <string name="stock_name">종목명</string>
    <string name="average_price">평단가</string>
    <string name="purchase_price">매수금액</string>
    <string name="quantity">수량</string>
    <string name="save">저장하기</string>
    <string name="won">원화</string>
    <string name="dollar">달러</string>
    <string name="domestic_stock">국내주식</string>
    <string name="overseas_stock">해외주식</string>
    <string name="virtual_currency">가상화폐</string>
    <string name="next">다음</string>
    <string name="youngcha">Youngcha</string>

    <!-- home -->
    <string name="home_today_benefit_empty">각 투자별 상황을 입력하고\n영찬이를 깨워주세요!</string>
    <string name="home_today_benefit">오늘의 수익금은</string>
    <string name="home_invest_status">나의 투자 현황은?</string>
    <string name="home_input_current_investment">각 투자별 현황을 입력하세요</string>
    <string name="home_last_budget">최종자산</string>
    <string name="home_benefit_percent">수익률(%)</string>
    <string name="home_benefit_price">수익금(원)</string>
    <string name="home_korea_money_unit">원</string>
    <string name="home_today_profit">오늘의 수익률</string>
    <string name="home_look_investment">내 투자 살펴보기</string>
    <string name="home_regist">등록하기</string>

    <!--home_detail-->
    <string name="home_detail_now_budget">현재 국내 자산(원)</string>
    <string name="home_detail_now_price">현재가</string>
    <string name="home_detail_average_price">평단가</string>
    <string name="home_detail_stock_count">보유량</string>
    <string name="home_detail_average_price_bitcoin">매수평균가</string>
    <string name="home_detail_modify">수정하기</string>
    <string name="home_detail_delete">삭제하기</string>

    <!-- fab -->
    <string name="fab_sub_modify">기존 종목 정보 수정</string>
    <string name="fab_sub_new">신규 종목 추가</string>
    <string name="sign_apple">애플 아이디로 계속하기</string>
    <string name="sign_kakao">카카오 계정으로 계속하기</string>

    <!-- Nickname -->
    <string name="nickname_title">우리 화성🚀갈꺼니까,\n영~차!</string>
    <string name="nickname_start">시작하기</string>
    <string name="nickname_duplicate">중복된 닉네임</string>
    <string name="nickname_input_hint">닉네임 입력</string>
    <string name="nickname_desc">닉네임을 정해주세요!(최대 5자)</string>

    <!-- add_stock -->
    <string name="add_stock_add_new_item">신규항목추가</string>
    <string name="add_stock_inform_new_item">신규 등록하실\n투자 종목을 알려주세요!</string>
    <string name="add_stock_search_stock_name">종목이름으로 검색해주세요.</string>

    <!-- add_search_stock -->
    <string name="add_stock_search_stock">종목 검색하기</string>
    <string name="add_stock_search_edit_text_hint">종목 이름, 종목 코드로 검색해 주세요</string>

    <!-- add_input_stock -->
    <string name="add_stock_input_stock">신규항목추가</string>
    <string name="add_stock_inform_input_stock">투자 종목의\n가격과 수량을 알려주세요!</string>
    <string name="add_stock_overseas_option">선택사항</string>
    <string name="add_stock_overseas_option_content">매입금 미입력시 해외주식 매입 평균환율은\n 현재환율 기준으로 계산되어 오차가 발생 할 수 있습니다</string>
    <string name="add_stock_overseas_option_adjust_exchange_rate">적용환율</string>
    <string name="add_stock_overseas_option_adjust_exchange_rate_hana_back">기본 - 하나은행 기준환율</string>
    <string name="add_stock_overseas_option_purchase_price">매입금</string>

    <!-- modify_stock -->
    <string name="modify_stock_modify_item">기존정보수정</string>
    <string name="modify_stock_select_modify_item">수정하실 종목을\n선택해주세요</string>

    <!-- modify_input_stock -->
    <string name="modify_stock_input_item">변경하실 투자 종목의\n가격과 수량을 입력해주세요!</string>
    <string name="modify_stock_modify_complete">변경완료</string>

    <!-- Calc -->
    <string name="calc_history">기록</string>
    <string name="calc_rate">수익률</string>
    <string name="calc_water">물타기</string>

    <!-- IncomeRate -->
    <string name="income_rate_title">미래의 수익금을\n예상해보세요!</string>
    <string name="income_rate_current_holding">현재 보유</string>
    <string name="income_rate_holding_price">보유 평단가 (원)</string>
    <string name="income_rate_holding_count">보유 수량 (원)</string>
    <string name="income_rate_purchase_amount">매입 금액 (원)</string>
    <string name="income_rate_target_income_rate">내 목표 수익률은?</string>
    <string name="income_rate_desc">+1000%까지 입력 가능해요</string>
    <string name="income_rate_target_income_rate_percent">목표 수익률 (%)</string>
    <string name="income_rate_share">공유하기</string>
    <string name="plus_percent">+%s%%</string>

    <!-- My Page -->
    <string name="mypage_title">%s님,\n환영합니다!</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_leave">회원탈퇴</string>

    <!-- Water -->
    <string name="water_title">미래의 평단가를\n예상해보세요!</string>
    <string name="water_subtitle_current_state">현재의 나는?</string>
    <string name="water_holding_price">보유 평단가</string>
    <string name="water_holding_count">보유 수량</string>
    <string name="water_purchase_amount">매입 금액</string>
    <string name="water_subtitle_water_fire">물/불타기</string>
    <string name="water_additional_price">추가 평단가</string>
    <string name="water_additional_count">추가 수량</string>
    
    <!-- Share -->
    <string name="share_future_budget">미래 내 돈은</string>
    <string name="share_save_image">이미지 저장하기</string>

</resources>