<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_calc"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_calculate_24"
        android:title="@string/menu_calc" />

    <item
        android:id="@+id/nav_board"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_event_note_24"
        android:title="@string/menu_board" />

    <item
        android:id="@+id/nav_mypage"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/menu_my" />

</menu>