<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.depromeet.muyaho.ui.modifystock.ModifyStockSelectViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_stock_modify_item"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="47dp"
            style="@style/TextBody1"/>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_cancel_white_24"
            android:scaleType="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="33dp"
            android:layout_marginRight="8dp"
            android:onClick="@{() -> vm.onCloseBtnClick()}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_stock_select_modify_item"
            android:lineSpacingExtra="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="106dp"
            style="@style/TextSubtitle1"/>

        <RadioGroup
            android:id="@+id/rg_stock_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <RadioButton
                android:id="@+id/rb_domestic_stock"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:gravity="center"
                android:button="@null"
                android:background="@drawable/shape_bg_stroke_radius_10dp_selector"
                android:text="@string/domestic_stock"
                style="@style/TextBody2"/>

            <RadioButton
                android:id="@+id/rb_overseas_stock"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:gravity="center"
                android:button="@null"
                android:background="@drawable/shape_bg_stroke_radius_10dp_selector"
                android:text="@string/overseas_stock"
                style="@style/TextBody2"
                android:layout_marginLeft="14dp"/>

            <RadioButton
                android:id="@+id/rb_virtual_currency"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:gravity="center"
                android:button="@null"
                android:background="@drawable/shape_bg_stroke_radius_10dp_selector"
                android:text="@string/virtual_currency"
                style="@style/TextBody2"
                android:layout_marginLeft="14dp"/>

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_stock"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/rg_stock_type"
            app:layout_constraintBottom_toTopOf="@id/tv_next"
            android:layout_margin="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/next"
            android:background="@drawable/shape_bg_fill_radius_8dp"
            android:backgroundTint="@color/primary_enable_color_selector"
            app:layout_constraintTop_toBottomOf="@id/rv_stock"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="32dp"
            style="@style/TextCaption1.Bold"
            android:enabled="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>