<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_1">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_back_white_24"
            android:scaleType="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="33dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_stock_modify_item"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="47dp"
            style="@style/TextBody1"/>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_cancel_white_24"
            android:scaleType="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="33dp"
            android:layout_marginRight="8dp"/>

        <ScrollView
            android:id="@+id/cl_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_back"
            app:layout_constraintBottom_toTopOf="@id/tv_save">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify_stock_input_item"
                    android:lineSpacingExtra="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    style="@style/TextSubtitle1"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_stock_info"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="112dp"
                    android:background="@drawable/shape_bg_fill_radius_16dp">

                    <TextView
                        android:id="@+id/tv_stock_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_4"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="14dp"
                        style="@style/TextCaption1"/>

                    <TextView
                        android:id="@+id/tv_stock_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black_1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="44dp"
                        style="@style/TextSubtitle2"/>

                    <TextView
                        android:id="@+id/tv_stock_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray_40"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="16dp"
                        style="@style/TextSubtitle1"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/ll_input"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/cl_stock_info"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="24dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="58dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/average_price"
                            android:textColor="@color/white_3"
                            style="@style/TextCaption1"/>

                        <com.depromeet.muyaho.widget.PriceEditText
                            android:id="@+id/pet_average_price"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_input_purchase_amount"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="24dp">

                        <TextView
                            android:layout_width="58dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/purchase_price"
                            android:textColor="@color/white_3"
                            style="@style/TextCaption1"/>

                        <com.depromeet.muyaho.widget.PriceEditText
                            android:id="@+id/pet_purchase_price"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="24dp">

                        <TextView
                            android:layout_width="58dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/quantity"
                            android:textColor="@color/white_3"
                            style="@style/TextCaption1"/>

                        <com.depromeet.muyaho.widget.PriceEditText
                            android:id="@+id/pet_quantity"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/modify_stock_modify_complete"
            android:background="@drawable/shape_bg_fill_radius_8dp"
            android:backgroundTint="@color/primary_enable_color_selector"
            app:layout_constraintTop_toBottomOf="@id/cl_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="32dp"
            style="@style/TextCaption1.Bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>